# integral_image

./: .travis.yml  CMakeLists.txt  README.md  install.sh
source/: Channel.cpp  Channel.h  Image.cpp  Image.h  ImageChannel.cpp  ImageChannel.h  ImageChannels.cpp  ImageChannels.h  IntegralImageConverter.cpp  IntegralImageConverter.h  ProgramOptions.cpp  ProgramOptions.h  main.cpp
test/: channel.cpp  program_options.cpp
